# Solarin

./: .gitignore  .gitmodules  Dockerfile  README.md  cloudbuild.yaml  deployment.sh  docker-compose.yaml  package-lock.json  requirements.txt  start_backend.sh
.github/: deploy.yml
backend/: .backend.service.swp  README.md  backend.service.save  config.yml  fill_db.py  gunicorn_start  migrate_database.sh  pyproject.toml  run_fill_db.sh
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 10935f67d319_.py  112a81bb72a7_.py  147ecf6e61cf_.py  147fb767e737_.py  1b78289a1d29_.py  1dcf60ec7163_.py  1de4618957a3_.py  1e736c4c6d24_.py  24f4f03ff6e4_.py  2557df07f635_.py  27f38912e23b_.py  31ce737bf9f1_.py  34df5a698a37_.py  39bf9035be44_.py  3f9c278285d6_.py  459ae861490a_.py  466be14cecf1_.py  479d363a568f_.py  4e1b00f1f62b_.py  517bdb1bdd36_test.py  58dd3622b374_.py  668a929f4d2f_.py  6e4d3102243c_.py  6f87fd8f97b6_.py  70f563436b50_.py  715a52e9823a_.py  7410fdbd8987_.py  75a3fc9a0be7_added_email_column_to_user_table.py  7a32dacd3cd7_.py  8076ef939a06_.py  8783461c6409_.py  8b229f49257b_.py  8d9955f4e112_.py  8eb752ccab74_test.py  8fa9f64c45a8_.py  9ab0e7175de2_.py  9bb6400d00ad_.py  9c0e018b231f_.py  9d5f6ad5a5f3_setup_tables.py  a132d85ff70a_.py  (+11 more)
backend/src/app/: __init__.py  __main__.py  app.py  config.py  customize_logger.py  database.py  models.py  schemas.py
backend/src/database/: Tables.sql
backend/src/logic/: __init__.py
backend/tests/: conftest.py  services.py  test_database.py  test_simple.py
backend/tests/authentication/: test_add_user.py
backend/tests/database/: conftest.py  test_alliance_access.py  test_army_access.py  test_building_access.py  test_create_tuples.py  test_db.py  test_general_access.py  test_get_planets_of_user.py  test_maintenance.py  test_planet_access.py  test_trade_access.py
(+407 files in other folders)
